# promptvault-lite

./: .eslintrc.json  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_WRAPUP.md  Prompt.md  README.md  SECURITY.md  SUPPORT.md  index.html  llms.txt  mkdocs.yml  package.json  playwright.config.ts  pnpm-lock.yaml  requirements-docs.txt  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
docs/: AI_HANDBUCH.md  AI_WORKFLOW.md  ARCHITECTURE.md  CHANGELOG.md  CONTEXT_ENGINEERING_STANDARD.md  DECISIONS.md  EVIDENCE_PORTFOLIO.md  EVIDENCE_STANDARD.md  GITHUB_REPOSITORY_SETTINGS_CHECKLIST.md  GOVERNANCE.md  INSTALL.md  NAS_PROMPT_FOLDER.md  PROJECT_STATUS.md  README.md  ROADMAP.md  SECURITY_GATES.md  TESTING.md  USER_GUIDE.md  glossary.md  index.md
scripts/: check_ai_governance.py
src/: App.css  App.tsx  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/analysis/: artifacts.rs  hygiene.rs  mod.rs  quality.rs  recommendations.rs
src-tauri/src/commands/: actions.rs  analyze.rs  export.rs  favorites.rs  mod.rs  persistence.rs  scan.rs
src-tauri/src/database/: cache.rs  mod.rs  sqlite.rs
src-tauri/src/models/: artifact.rs  evaluation.rs  hygiene.rs  mod.rs  prompt.rs
src-tauri/src/parser/: frontmatter.rs  markdown.rs  mod.rs
src-tauri/src/scanner/: file_scanner.rs  mod.rs  watcher.rs
src-tauri/tests/: command_errors.rs  quality_regex_regression.rs  real_corpus_validation.rs
(+226 files in other folders)
