[package]
name = "promptvault-lite"
version = "1.0.0"
description = "Lokales Prompt-Management-System mit Qualitäts- und Hygieneanalyse"
authors = ["PromptVault Team"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "promptvault_lite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
walkdir = "2"
notify = { version = "6", features = ["macos_kqueue"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
